feat: Add notification server of email config

--- a/src/pages/Dashboard/NotificationServer/index.scss
+++ b/src/pages/Dashboard/NotificationServer/index.scss
@@ -65,3 +65,13 @@
     width: 128px;
   }
 }
+
+.btnLoading {
+  opacity: 0.5;
+}
+.testConnect {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+}
