--- a/src/pages/Dashboard/Categories/index.scss
+++ b/src/pages/Dashboard/Categories/index.scss
@@ -1,6 +1,9 @@
 @import '~scss/vars';
 
-.page {
+.categoryPage {
+  width: 1100px !important;
+  padding-right: 20px;
+
   .summary {
     margin-bottom: 22px;
   }
