--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -187,7 +187,7 @@
 
       &:last-child {
         padding-right: 20px;
-        text-align: right;
+        // text-align: right;
       }
 
       &.actions {
