--- a/src/pages/Dashboard/Apps/Detail/index.scss
+++ b/src/pages/Dashboard/Apps/Detail/index.scss
@@ -62,6 +62,8 @@
   @include normal-font($line-height: 20px, $font-size: 12px);
 
   .type {
+    display: inline-block;
+    margin-right: 4px;
     color: $N75;
   }
 }
@@ -87,4 +89,26 @@
       }
     }
   }
+}
+
+.operationIcon {
+  top: auto !important;
+  bottom: 24px;
+}
+
+.versionType {
+  line-height: 32px;
+}
+
+.operationVersion {
+  text-align: left;
+}
+
+.suspended {
+  @include note-font;
+  display: inline-block;
+  position: relative;
+  top: -6px;
+  padding: 0 4px;
+  background-color: $N10;
 }
