--- a/src/portals/user/Layout/index.scss
+++ b/src/portals/user/Layout/index.scss
@@ -9,4 +9,6 @@ $offset-top: $header-height + 30 *2 + 52;
   width: $page-width;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 36px;
+  margin-bottom: 80px;
 }
