feat: Add runtimes, runtime create page for user portal
Fix all routes links

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -4,7 +4,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  padding-top: $footer-padding-top;
+  //padding-top: $footer-padding-top;
 
   .wrapper {
     height: $footer-height;
