--- a/src/pages/Dashboard/Runtimes/InstanceList/index.scss
+++ b/src/pages/Dashboard/Runtimes/InstanceList/index.scss
@@ -33,6 +33,10 @@
   .icon {
     font-weight: 500;
     color: $N300;
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
   .type {
     margin-left: 12px;
