--- a/src/portals/user/Layout/index.scss
+++ b/src/portals/user/Layout/index.scss
@@ -7,8 +7,5 @@ $offset-top: $header-height + 30 *2 + 52;
   position: relative;
   top: $offset-top;
   width: $page-width;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 36px;
-  margin-bottom: 80px;
+  margin: 36px auto 80px auto;
 }
