feat: Portal design (#688)
* Add user, dev, isv, admin portal routes

* feat: Portal architecture

* chore: Admin portal (#690)

* chore: Developer portal (#691)

* fix: TopNav switch link in different portals (#692)

* feat: Add cluster, cluster detail to user portal

* Refine entry file

* Refine Layout comp, remove socket listen

* feat: Add runtimes, runtime create page for user portal

* Fix all routes links

* Refactor: Cluster, runtime pages suit user and non-user portal

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,10 +1,10 @@
 @import "~scss/vars";
 
 .footer {
-  position: static;
-  //bottom: 0;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  padding-top: $footer-padding-top;
+  //padding-top: $footer-padding-top;
 
   .wrapper {
     height: $footer-height;
