fix query-string crash in safari
Fix input autofill
Fix side nav popover menu

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -186,4 +186,13 @@
   .hide {
     display: none;
   }
+
+  // hide safari autofill icon
+  input::-webkit-contacts-auto-fill-button {
+    visibility: hidden;
+    display: none !important;
+    pointer-events: none;
+    position: absolute;
+    right: 0;
+  }
 }
