--- a/src/pages/Dashboard/Providers/Create/index.scss
+++ b/src/pages/Dashboard/Providers/Create/index.scss
@@ -14,6 +14,36 @@
 
   dl {
     margin-bottom: 24px;
+
+    &.error {
+      input {
+        border-color: $R300;
+      }
+
+      .column {
+        >p {
+          margin-top: 8px;
+          line-height: 20px;
+          font-size: 12px;
+          color: $R300;
+
+          &.note {
+            display: none;
+          }
+        }
+      }
+      >p {
+        margin-top: 8px;
+        line-height: 20px;
+        font-size: 12px;
+        color: $R300;
+
+        &.note {
+          display: none;
+        }
+      }
+
+    }
   }
 
   dt  {
