--- a/src/pages/Dashboard/Providers/Create/index.scss
+++ b/src/pages/Dashboard/Providers/Create/index.scss
@@ -15,34 +15,8 @@
   dl {
     margin-bottom: 24px;
 
-    &.error {
-      input {
-        border-color: $R300;
-      }
-
-      .column {
-        >p {
-          margin-top: 8px;
-          line-height: 20px;
-          font-size: 12px;
-          color: $R300;
-
-          &.note {
-            display: none;
-          }
-        }
-      }
-      >p {
-        margin-top: 8px;
-        line-height: 20px;
-        font-size: 12px;
-        color: $R300;
-
-        &.note {
-          display: none;
-        }
-      }
-
+    &.bankName {
+      height: 88px;
     }
   }
 
@@ -74,6 +48,27 @@
 
   .protocol {
     @include normal-font($line-height: 20px)
+  }
+
+  .error{
+    position: relative;
+
+    input {
+      border-color: $R300;
+    }
+
+    >p {
+      position: absolute;
+      left: 0;
+      margin-top: 8px;
+      line-height: 20px;
+      font-size: 12px;
+      color: $R300;
+
+      &.note {
+        display: none;
+      }
+    }
   }
 }
 
