--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -1,5 +1,7 @@
 @import "~scss/vars";
 
+$speed: 0.2s;
+
 .banner {
   position: fixed;
   width: 100%;
@@ -7,7 +9,7 @@
   top: $header-height;
   padding: 30px 0;
   background-color: $N500;
-  transition: all .3s ease-in-out;
+  transition: all $speed ease-in-out;
 
   &.stretch {
     padding: 64px 0;
@@ -20,7 +22,7 @@
   &.shrink {
     padding: 30px 0 !important;
     .search {
-      transition: all .3s ease-in-out;
+      transition: all $speed ease-in-out;
       float: right;
       top: -15px;
     }
@@ -88,7 +90,7 @@
       border-radius: 16px;
       border: 1px solid transparent;
       background-color: rgba(255, 255, 255, 0.1);
-      transition: all 0.3s ease-in-out;
+      transition: all $speed ease-in-out;
 
       &::placeholder {
         font-size: 12px;
