fix: Screenshots component display

--- a/src/pages/AppDetail/Screenshots/index.scss
+++ b/src/pages/AppDetail/Screenshots/index.scss
@@ -13,10 +13,26 @@
     height: 30px;
     bottom: 80px;
     cursor: pointer;
+
+    &:hover {
+      svg {
+        --primary-color: #{$P75};
+        --secondary-color: #{$P75};
+      }
+
+      .prohibited {
+        cursor: not-allowed;
+        svg {
+          --primary-color: #{$N75};
+          --secondary-color: #{$N75};
+        }
+      }
+    }
   }
   .next {
     right: 10px;
   }
+
   .dotList {
     position: absolute;
     bottom: -35px;
@@ -38,33 +54,34 @@
   }
   .listOuter {
     position: relative;
-    margin: 40px 36px 70px;
-    height: 220px;
+    margin: 0 36px 70px;
+    height: $picture-height + $picture-margin*2;
+    width:  $picture-width *2 + $picture-margin*5;
     overflow: hidden;
 
     .pictureList {
       position: absolute;
       left: 0;
       bottom: 0;
-      width: 1200px;
+      width: ($picture-width + $picture-margin*3)*6;
     }
   }
 
   .pictureOuter {
     float: left;
-    width: 260px;
-    height: 200px;
+    width: $picture-width + $picture-margin*2;
+    height: $picture-height + $picture-margin*2;
     background-color: $background-color;
-    margin-right: 12px;
+    margin-right: $picture-margin;
 
     .picture {
-      margin: 10px;
-      width: 240px;
-      height: 180px;
-      box-shadow: 0 2px 10px 1px rgba(20, 8, 32, 0.2);
-      background: transparent;
+      margin: $picture-margin;
+      width: $picture-width;
+      height: $picture-height;
+      //box-shadow: 0 2px 10px 1px rgba(20, 8, 32, 0.2);
+      //background: transparent;
       text-align: center;
-      line-height: 170px;
+      line-height: $picture-height;
       font-size: 30px;
       cursor: pointer;
 
