--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,6 +1,7 @@
 // import partials
 
 @import "partial/color";
+@import "partial/form";
 @import "partial/text";
 @import "partial/icon";
 @import "partial/grid";
