--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -45,6 +45,7 @@
     }
 
     &.disabled {
+      display: none;
       @extend %disabledLink;
       .title {
         cursor: not-allowed;
@@ -140,11 +141,11 @@
       border-bottom: 1px solid $N10;
 
       .icon {
-        margin: 23px 24px 16px 24px;
+        margin: 22px 24px 16px 24px;
       }
 
       .title {
-        line-height: 64px;
+        line-height: 63px;
         font-size: 16px;
         color: $N500;
         font-weight: 500;
@@ -183,7 +184,7 @@
   }
 }
 
-@media screen and (min-height: 550px) {
+@media screen and (min-height: 280px) {
   .bottomNav {
     position: fixed;
     bottom: 0;
@@ -253,6 +254,7 @@
     }
 
     &.disabled {
+      display: none;
       @extend %disabledLink;
     }
   }
