fix: Runtime page platform count float style

--- a/src/pages/Dashboard/Runtimes/index.scss
+++ b/src/pages/Dashboard/Runtimes/index.scss
@@ -79,6 +79,7 @@ $card-height: 188px;
           font-size: $size-small;
           float: right;
           margin-right: 23px;
+          clear: both;
         }
       }
     }
