--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -18,7 +18,7 @@
   transition: all 0.3s ease-out 0s;
 
   &:hover {
-    width: $menu-width;;
+    width: $menu-width;
 
     .bottomNav {
       width: $menu-width;
@@ -72,7 +72,7 @@
 }
 
 .topNav {
-  >li {
+  > li {
     .imageOuter {
       float: left;
       display: inline-block;
@@ -155,9 +155,8 @@
   }
 }
 
-
 .bottomNav {
-  >li {
+  > li {
     .iconOuter {
       [class*='target'] {
         width: auto;
@@ -166,8 +165,8 @@
         border: 0 none;
       }
 
-      :global{
-        .pi-popover-popper{
+      :global {
+        .pi-popover-popper {
           margin-left: -10px !important;
           margin-bottom: -30px !important;
         }
@@ -192,8 +191,21 @@
     z-index: 5;
     width: $menu-nav-width;
   }
+
+  .userBottomNav {
+    position: static;
+  }
 }
 
+@media screen and (min-height: 480px) {
+  .userBottomNav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 5;
+    width: $menu-nav-width;
+  }
+}
 
 .subNav {
   position: fixed;
@@ -231,7 +243,7 @@
   }
 
   .subTitle {
-    padding-left:20px;
+    padding-left: 20px;
     line-height: 24px;
     font-size: 12px;
     color: $N65;
@@ -260,18 +272,18 @@
   }
 }
 
-.header{
+.header {
   position: fixed;
   left: 0;
   top: 0;
   z-index: 4;
   width: 100%;
- /* position: static;
+  /* position: static;
   margin: -68px -20px 20px;*/
   height: 48px;
   background-color: $background-color;
 
-  .user [class*='target']{
+  .user [class*='target'] {
     float: right;
     margin: 12px 24px;
     height: 20px;
@@ -280,13 +292,13 @@
     color: $N500;
     font-weight: 500;
     border: 0 none;
-    &:hover{
+    &:hover {
       border: 0 none;
       box-shadow: none;
       opacity: 1;
     }
-    :global{
-      .icon-caret-down{
+    :global {
+      .icon-caret-down {
         position: relative;
         top: 3px;
         left: 2px;
@@ -298,8 +310,8 @@
     }
   }
 
-  :global{
-    .pi-popover-popper{
+  :global {
+    .pi-popover-popper {
       margin-left: -85px !important;
       margin-top: 6px !important;
     }
@@ -309,7 +321,7 @@
     min-width: 120px;
     li {
       > a,
-      > label{
+      > label {
         display: block;
         height: 32px;
         padding: 0 12px;
@@ -327,7 +339,7 @@
         color: $N500;
       }
 
-      &.line{
+      &.line {
         border-bottom: 1px solid $N10;
       }
     }
@@ -335,7 +347,6 @@
 }
 
 .headerShadow {
-  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04)
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06),
+    0 4px 8px 0 rgba(35, 35, 36, 0.04);
 }
-
-
