fix: Am api url (#772)
* fix: Am api url

* fix: hover tree style

* fix: style

--- a/src/components/Base/Tree/index.scss
+++ b/src/components/Base/Tree/index.scss
@@ -45,12 +45,12 @@
   }
 }
 
+.tree.hoverTree li {
+  padding: 6px;
+  position: relative;
+}
 .hoverTree {
   :global {
-    li {
-      padding: 6px;
-      position: relative;
-    }
     .rc-tree-node-content-wrapper {
       &::before {
         content: '';
